plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'de.lenneflow'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:latest.release'
    implementation 'org.springframework.boot:spring-boot-starter-web:latest.release'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon:latest.release'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:latest.release'
    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8:latest.release'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:latest.release'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:latest.release'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:latest.release'
    implementation 'de.codecentric:spring-boot-admin-starter-client:latest.release'
    implementation 'org.springframework.boot:spring-boot-starter-amqp:latest.release'
    implementation 'com.networknt:json-schema-validator:1.5.2'
    implementation 'com.ezylang:EvalEx:3.3.0'
    implementation 'org.modelmapper:modelmapper:3.2.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:latest.release'
    compileOnly 'org.projectlombok:lombok:latest.release'
    annotationProcessor 'org.projectlombok:lombok:latest.release'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
